--- a/turkeycc/supporters.html
+++ b/turkeycc/supporters.html
@@ -1,191 +1,283 @@
 <!DOCTYPE HTML>
 <!--
-	Twenty by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Twenty by HTML5 UP</title>
+		<title>Sponsors &amp; Resources - MSU x İzmir SEV Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="right-sidebar is-preload">
-		<div id="page-wrapper">
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
-
-			<!-- Main -->
-				<article id="main">
-
-					<header class="special container">
-						<span class="icon solid fa-tablet-alt"></span>
-						<h2>Behold the <strong>Right Sidebar</strong></h2>
-						<p>Where things on the right ... accompany that on the left.</p>
+			
+                    <!-- Header -->
+					<header id="header">
+						<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="current"><a href="index.html">HOME</a></li>
+								<li class="submenu">
+									<a href="#">MENU</a>
+									<ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="news.html">News</a></li>
+										<li><a href="resources.html">Resources</a></li>
+										<li><a href="tcc_team.html">Team</a></li>
+										<li><a href="supporters.html">Supporters</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
 					</header>
 
-					<!-- One -->
-						<section class="wrapper style4 container">
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<h1>Sponsors &amp; Supporters</h1>
+							<span class="image main"><img src="images/izmir.jpg" alt="Photo of a weathered cabin on a dock on a beach in Belize. Palm trees frame the photo." /></span>
+						
 
-							<div class="row gtr-150">
-								<div class="col-8 col-12-narrower">
+							<h2>Institutional and Corporate Supporters</h2>
 
-									<!-- Content -->
-										<div class="content">
-											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<header>
-													<h3>Dolore Amet Consequat</h3>
-												</header>
-												<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-												<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-												<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
-											</section>
-										</div>
+							<div >
+								<table class="alt align-center">
+									<tbody>
+										<tr>
+											<td>
+												<a href="https://www.cse.msu.edu" target="_blank">
+													MSU College of Engineering
+												</a>
+											</td>
+											<td>
+												<a href="https://www.sevizmir.k12.tr/" target="_blank">
+													İzmir Sev
+												</a>
+											</td>
+											<td>
+												<a href="https://www.acm.org/" target="_blank">
+													ACM
+												</a>
+											</td>
+										</tr>
 
-								</div>
-								<div class="col-4 col-12-narrower">
+										<tr>
+											<td>
+												<a href="https://www.cse.msu.edu" target="_blank">
+													<img src="images/Sponsor/Combomark-Horiz_Green-RGB240x120r72.jpg" alt="">
+												</a>
+											</td>
+											<td>
+												<a href="https://www.sevizmir.k12.tr/" target="_blank">
+													<img src="images/Sponsor/download.png" alt="">
+												</a>
+											</td>
+											<td>
+												<a href="https://www.acm.org/" target="_blank">
+													<img src="images/Sponsor/acm_rgb_grad_pos240x120r72.png" alt="Logo for the Association of Computing Machinery">
+												</a>
+											</td>
+										</tr>
 
-									<!-- Sidebar -->
-										<div class="sidebar">
-											<section>
-												<header>
-													<h3>Magna Feugiat</h3>
-												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-												<footer>
-													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
-													</ul>
-												</footer>
-											</section>
+										<tr>
+											<td>
+												<a href="https://www.sigsoft.org/" target="_blank">
+													ACM SIGSOFT
+												</a>
+											</td>
+											<td>
+												<a href="https://www.ieee.org//" target="_blank">
+													IEEE
+											</td>
+											<td>
+												<a href="https://tc.computer.org/tcse/" target="_blank">
+													IEEE Technical Council on Software Engineering
+												</a>
+											</td>
+										</tr>
 
-											<section>
-												<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-												<header>
-													<h3>Amet Lorem Tempus</h3>
-												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-												<footer>
-													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
-													</ul>
-												</footer>
-											</section>
-										</div>
+										<tr>
+											<td>
+												<a href="https://www.sigsoft.org/" target="_blank">
+													<img src="images/Sponsor/sigsoft240x120r72.png" alt="Logo for the Special Interest Group in Software Engineering">
+												</a>
+											</td>
+											<td>
+												<a href="https://www.ieee.org//" target="_blank">
+													<img src="images/Sponsor/IEEE-CS_75th-Logo-orange240x120r72.png" alt="Logo for the IEEE">
+											</td>
+											<td>
+												<a href="https://tc.computer.org/tcse/" target="_blank">
+													<img src="images/Sponsor/TCSE-Logo-blueText-CMYK-240x120r72.png" alt="Logo for the Technical ">
+												</a>
+											</td>
+										</tr>
+									</tbody>
+									<!--
+									<tfoot>
+										<tr>
+											<td colspan="2"></td>
+											<td>100.00</td>
+										</tr>
+									</tfoot>
+								-->
+								</table>
 
-								</div>
+								<h2>Individual Supporters</h2>
+
+								<table class="alt align-center">
+									<tbody>
+										<tr>
+											<td>
+												<a href="https://www.cse.msu.edu/~ldillon" target="_blank">
+													Laura K. Dillon
+												</a>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+
+								<h2 id="donate">How to donate</h2>
+								<p>
+									You may charge your tax-deductible gift using the University Development Online Gift Cart: <a href="https://www.givingto.msu.edu/gift/index.cfm" target="_blank">https://www.givingto.msu.edu/gift/index.cfm</a>.
+								</p>
+								<ol>
+									<li>Type <em>Department of Computer Science and Engineering</em> into the search box and select it.</li>
+									<li>Enter the amount and select <em>Proceed to Checkout</em>.</li>
+									<li>After submitting your credit card information and approving payment, you will receive a receipt by email.
+									    Save this receipt for your tax records.
+										  (Gifts to MSU are tax deductible to the extent permitted by law.)</li>
+									<li>
+										<em>
+											Forward a copy of the receipt to <a href="mailto:turkeycc@egr.msu.edu">turkeycc@egr.msu.edu</a> so that we can ensure that the gift is credited to the MSU x PathLight Coding Clubs Program.
+										</em>
+									</li>
+								</ol>
+								<p>
+									If you prefer to mail your gift, please include your credit card number, expiration date, the name under which the card is issued, and the program (MSU x PathLight - CSE) on your <a href="https://www.egr.msu.edu/sites/default/files/pledgeform.pdf" target="_blank">gift pledge form (.pdf)</a>.
+								</p>
+								<p>
+									Pledge forms should be mailed to:
+									<br><br>
+									Office of Development<br>
+									College of Engineering<br>
+									Michigan State University<br>
+									428 S. Shaw Lane, Room 3536<br>
+									East Lansing, MI 48824-1226
+									<br><br>
+									Ph: 517-884-1000 (Local)<br>
+									Ph: 800-232-4678 (Toll Free)<br>
+								</p>
+
+								<p>Banner photo: <a href="https://www.wallpaperbetter.com/en/hd-wallpaper-aljjw" target="_blank">Belize tropical landscape</a>.
+
 							</div>
-						</section>
 
-					<!-- Two -->
-						<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
+						</div>
+					</div>
 
-									<section>
-										<header>
-											<h3>This is Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
+					<!-- Footer -->
+						<!-- template version
+						<footer id="footer">
+							<div class="inner">
+								<section>
+									<h2>Get in touch</h2>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<input type="text" name="name" id="name" placeholder="Name" />
+											</div>
+											<div class="field half">
+												<input type="email" name="email" id="email" placeholder="Email" />
+											</div>
+											<div class="field">
+												<textarea name="message" id="message" placeholder="Message"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send" class="primary" /></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<h2>Follow</h2>
+									<ul class="icons">
+										<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
+										<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+										<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									</ul>
+								</section>
+								<ul class="copyright">
+									<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+									<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								</ul>
 							</div>
-						</section>
+						</footer>
+					-->
 
-				</article>
 
-			<!-- Footer -->
 				<footer id="footer">
+					<div class="inner">
+					<div class="box alt">
+						<div class="row gtr-uniform">
 
-					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
+									<!-- contact information -->
+									<div class="col-4">
+											<h4>Contact</h4>
+											428 S. Shaw Lane<br>
+											Engineering Building, Room 1410A<br>
+											Michigan State University<br>
+											East Lansing, MI 48824<br>
+											Phone: (517)884-0054<br>
+											Email: <a href="mailto:belizecc@egr.msu.edu?subject=[MSU x PATH] **REPLACE WITH TOPIC**">belizecc@egr.msu.edu</a>
+									</div>
 
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+									<!-- links -->
+									<div class="col-4">
+											<h4>Links</h4>
+											<ul>
+													<li><a href="https://www.egr.msu.edu/wie/" title="Michigan State University Women in Engineering WIE" target="_blank">MSU Women in Engineering</a></li>
+													<li><a href="https://www.cse.msu.edu" title="Michigan State University Department of Computer Science &amp; Engineering" target="_blank">MSU Computer Science &amp; Engineering</a></li>
+													<li><a href="https://pathlight.org" title="PathLight International">PathLight International</a></li>
+											</ul>
+									</div>
+
+
+									<!-- about Technovation -->
+									<div class="col-4">
+											<h4>Nondiscrimination</h4>
+												MSU WIE does not unlawfully discriminate.
+												All events and programs are open to students of all genders.<br>
+												<a href="https://civilrights.msu.edu/policies/" target="_blank">Notice of Nondiscrimanation</a>
+									</div>
+
+							</div> <!-- /.row -->
+					</div> <!-- /.box -->
+
+						<ul class="copyright">
+							<li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</li>
+							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</div> <!-- inner -->
 
 				</footer>
 
-		</div>
+
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollgress.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
