--- a/turkeycc/tcc_team.html
+++ b/turkeycc/tcc_team.html
@@ -25,10 +25,10 @@
 								<a href="#">MENU</a>
 								<ul>
 									<li><a href="index.html">Home</a></li>
-									<li><a href="right-sidebar.html">News</a></li>
-									<li><a href="no-sidebar.html">Resources</a></li>
+									<li><a href="news.html">News</a></li>
+									<li><a href="resources.html">Resources</a></li>
 									<li><a href="tcc_team.html">Team</a></li>
-									<li><a href="no-sidebar.html">Supporters</a></li>
+									<li><a href="supporters.html">Supporters</a></li>
 								</ul>
 							</li>
 						</ul>
