--- a/turkeycc/resources.html
+++ b/turkeycc/resources.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="page-wrapper">
 
 
                     <!-- Header -->
