--- a/turkeycc/supporters.html
+++ b/turkeycc/supporters.html
@@ -6,36 +6,34 @@
 -->
 <html>
 	<head>
-		<title>Sponsors &amp; Resources - MSU x İzmir SEV Coding Club</title>
+		<title>Supporters - MSU x İzmir SEV Coding Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
-
+	<body class="contact is-preload">
+		<div id="page-wrapper">
 			
                     <!-- Header -->
-					<header id="header">
-						<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
-						<nav id="nav">
+			<header id="header">
+				<h1 id="logo"><a href="index.html">MICHIGAN STATE<span> UNIVERSITY X İzmir</span> SEV</a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="index.html">HOME</a></li>
+						<li class="submenu">
+							<a href="#">MENU</a>
 							<ul>
-								<li class="current"><a href="index.html">HOME</a></li>
-								<li class="submenu">
-									<a href="#">MENU</a>
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="news.html">News</a></li>
-										<li><a href="resources.html">Resources</a></li>
-										<li><a href="tcc_team.html">Team</a></li>
-										<li><a href="supporters.html">Supporters</a></li>
-									</ul>
-								</li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="news.html">News</a></li>
+								<li><a href="resources.html">Resources</a></li>
+								<li><a href="tcc_team.html">Team</a></li>
+								<li><a href="supporters.html">Supporters</a></li>
 							</ul>
-						</nav>
-					</header>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
 				<!-- Main -->
 					<div id="main">
